--- a/src/pages/CaseStudy/components/CaseStudyHeader/components/ItemsList/ItemsList.scss
+++ b/src/pages/CaseStudy/components/CaseStudyHeader/components/ItemsList/ItemsList.scss
@@ -1,4 +1,5 @@
 .itemsList {
+  overflow: hidden;
   &__teamMemberName {
     flex: 0;
     display: grid;
